# DroidNet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Common.props  Directory.build.props  Directory.build.targets  Directory.packages.props  GenerateAllSolution.bat  LICENSE  NuGet.config  README.md  SCENE_EXPLORER_ANALYSIS.md  SCENE_EXPLORER_IMPROVEMENTS.md  SCENE_EXPLORER_IMPROVEMENTS_SUMMARY.md  SCENE_EXPLORER_INDEX.md  SCENE_EXPLORER_QUICK_REFERENCE.md  SCENE_EXPLORER_VISUAL_GUIDE.md  SUMMARY.md  SpellingExclusions.dic  build_output.txt  clean.ps1  global.json  init.ps1  settings.xamlstyler  stylecop.json  test-settings.json  version.json
projects/Oxygen.Engine/: .bazelrc  .clang-format  .clang-tidy  .clangd.in  .gitignore  .markdownlint.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  Catch2.runsettings  ConanPresets.json  Directory.build.props  Folder.DotSettings  GEMINI.md  GetAftermath.bat  GetAftermath.ps1  GetDXC.bat  GetDXC.ps1  GetPIX.bat  GetPIX.ps1  GetRenderDoc.bat  GetRenderDoc.ps1  GetWinPixEvent.bat  GetWinPixEvent.ps1  HYBRID_STORAGE_SUMMARY.md  MODULE.bazel  README.md  TEMP_texture_methods.cpp  conanfile.py  cpp.hint  premake5.lua  pyrightconfig.json  pytest.ini  renderlistbuilder_results.xml  repomix.config.json  scene_loader_plan.md  shadow_backend_trace.txt  shadow_finalize_trace.txt  temp_diff_review.txt  test_detail.xml  (+4 more)
projects/Oxygen.Engine/.github/: copilot-instructions.md
projects/Oxygen.Engine/.github/instructions/: DOC_INSTRUCTIONS.md  TEST_INSTRUCTIONS.md  cpp_coding_style.instructions.md  doc_comments.instructions.md  unit_tests.instructions.md
projects/Oxygen.Engine/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
projects/Oxygen.Engine/Examples/: .gitignore  CMakeLists.txt  README.md  main.cpp  premake5.lua
projects/Oxygen.Engine/Examples/Async/: AsyncDemoPanel.cpp  AsyncDemoPanel.h  AsyncDemoSettingsService.cpp  AsyncDemoSettingsService.h  AsyncDemoTypes.h  AsyncDemoVm.cpp  AsyncDemoVm.h  AsyncEngineApp.h  CMakeLists.txt  DroneControlPanel.cpp  DroneControlPanel.h  MainModule.cpp  MainModule.h  README.md  demo_settings.json  main_impl.cpp
projects/Oxygen.Engine/Examples/AsyncEngine/: AsyncEngineRunner.h  AsyncEngineSimulator.cpp  AsyncEngineSimulator.h  CMakeLists.txt  EngineTypes.h  ExampleModules.h  FrameContext.cpp  FrameContext.h  GraphicsLayer.cpp  GraphicsLayer.h  IEngineModule.h  ModuleContext.cpp  ModuleContext.h  ModuleManager.h  Platform.cpp  Platform.h  PlatformEvent.h  README.md  ResourceHandle.h  SignalAwaitable.h  SimpleModule.h  execution_model.md  main.cpp  main_impl.cpp  phase-summary.md  refactor.md  ts_init.cpp
projects/Oxygen.Engine/Examples/Common/: AppWindow.cpp  AppWindow.h  AsyncEngineApp.h  DemoCli.h  ExampleComposition.h  ExampleModuleBase.cpp  ExampleModuleBase.h  FrameCaptureCli.h  FrameCaptureCliOptions.h  README.md  RenderGraph.cpp  RenderGraph.h  SingleViewExample.cpp  (+4 more)
projects/Oxygen.Engine/Oxygen/: BUILD  MODULE.bazel  api_export.h  cpp.hint  oxygen-tests.vcxproj  oxygen-tests.vcxproj.filters  oxygen.vcxproj  oxygen.vcxproj.DotSettings  oxygen.vcxproj.filters  premake5.lua  vcpkg.json  version-info.h
projects/Oxygen.Engine/Oxygen.Editor.Interop/: premake5.lua
projects/Oxygen.Engine/Oxygen.Renderer.Direct3D12/: cpp.hint  oxygen-renderer-direct3d12.vcxproj  oxygen-renderer-direct3d12.vcxproj.filters  vcpkg.json
projects/Oxygen.Engine/Oxygen.Renderer.Loader/: oxygen-renderer-loader.vcxproj  oxygen-renderer-loader.vcxproj.filters
projects/Oxygen.Engine/Oxygen.Sdl3/: api_export.h  oxygen-sdl3.vcxproj  oxygen-sdl3.vcxproj.filters  vcpkg.json
projects/Oxygen.Engine/Oxygen.Tests/: oxygen-tests.vcxproj  oxygen-tests.vcxproj.filters  packages.config  vcpkg.json
projects/Oxygen.Engine/Properties/: CompilerDefines.props  CompilerFlags.props  LinkerFlags.props  OutputDirs.props  VcpkgConfig.props
projects/Oxygen.Engine/cmake/: BuildHelpers.cmake  Catch2Helpers.cmake  DoxGeneration.cmake  FasterBuild.cmake  GTestHelpers.cmake  GenerateEmbeddedJsonSchemas.cmake  Install.cmake  JsonSchemaHelpers.cmake  LogHelpers.cmake  README.md  ResetInitialCompilerOptions.cmake  VersionHelpers.cmake
projects/Oxygen.Engine/copts/: copts.py
projects/Oxygen.Engine/design/: Bindless Usage.md  BindlessArchitecture.md  BindlessPlan.md  BindlessRenderingDesign.md  BindlessRenderingRootSignature.md  ConventionalDirectionalShadowRemediationPlan.md  ConventionalShadowMapDesign.md  DepthPrePassRemediationPlan.md  InputPakFormatV6.md  LightCullingRemediationPlan.md  PBR.md  PakFormatVersion7_Physics.md  PipelineDesign.md  PostProcessPanel.md  RenderPassesDesign.md  SceneGraphNamingRequirements.md  SceneSystemDesignAnalysis.md  ScriptingPakFormatPhase2.md  ScriptingRuntimeCompilationPlan.md  ShaderSystemAssessment.md  Time.md  VirtualShadowMapArchitecture.md  VsmCacheManagerAndPageAllocationImplementationPlan.md  VsmFloorShadowContinuityInvestigation.md  VsmImplementationPlan.md  VsmPerformanceOptimizationPlaybook.md  VsmShadowRasterizerImplementationPlan.md  WU1_CoreTypesAndInterfaces.md  anti-aliasing-tobe.md  async_import_implementation_plan.md  async_import_pipeline_v2.md  async_import_planner.md  async_import_test_plan.md  atmo_multiview_design.md  conventional_shadows.md  cook_buffers.md  cook_geometry.md  cook_input.md  cook_input_impl.md  cook_materials.md  (+27 more)
projects/Oxygen.Engine/doxygen/: Doxyfile.in
projects/Oxygen.Engine/examples/: BUILD  MODULE.bazel
projects/Oxygen.Engine/profiles/: Linux-clang.ini  Linux-coverage.ini  Linux-gcc-asan.ini  Linux-gcc.ini  macos-clang-asan.ini  macos-clang.ini  windows-github.ini  windows-msvc-asan.ini  windows-msvc.ini
projects/Oxygen.Engine/src/: CMakeLists.txt
projects/Oxygen.Engine/tools/: RunVsmTests.ps1  generate-builds.bat  generate-builds.ps1  run-test-exes.ps1
tooling/scripts/: README.md  __init__.py  __main__.py  get_artifacts.py  hello.py  pyproject.toml  traverse.py
tooling/scripts/traversal/: __init__.py  arguments.py  gitignore.py  msbuild.py  runner.py  task_registry.py  tfm.py
(+9832 files in other folders)
